# Matrix-Framework

./: .gitignore  .gitmodules  Build_Makefiles.bat  Build_Makefiles.sh  Build_VS2019Sln.bat  Build_VS2022Sln.bat  CMakeLists.txt  README.md
Libraries/: CMakeLists.txt
Libraries/Matrix-Engine/: CMakeLists.txt
Libraries/Matrix-Engine/Include/: CMakeLists.txt
Libraries/Matrix-Engine/Include/Matrix/: CMakeLists.txt  matrix.h
Libraries/Matrix-Engine/Include/Matrix/Application/: CMakeLists.txt  application.h  application_data.h
Libraries/Matrix-Engine/Include/Matrix/Application/INTERNAL/: CMakeLists.txt  INTERNAL_application.h  INTERNAL_application_data.h
Libraries/Matrix-Engine/Include/Matrix/Console/: CMakeLists.txt  console.h
Libraries/Matrix-Engine/Include/Matrix/Core/: CMakeLists.txt  configuration.h  core.h  error.h  main.h
Libraries/Matrix-Engine/Include/Matrix/Engine/: CMakeLists.txt  engine.h  engine_data.h
Libraries/Matrix-Engine/Include/Matrix/Engine/INTERNAL/: CMakeLists.txt  INTERNAL_engine.h  INTERNAL_engine_data.h
Libraries/Matrix-Engine/Include/Matrix/Logger/: CMakeLists.txt  logger.h  logger_data.h
Libraries/Matrix-Engine/Include/Matrix/Logger/INTERNAL/: CMakeLists.txt  INTERNAL_logger.h  INTERNAL_logger_data.h  INTERNAL_logger_errors.h
Libraries/Matrix-Engine/Include/Matrix/Memory/: CMakeLists.txt  memory.h
Libraries/Matrix-Engine/Include/Matrix/Pch/: CMakeLists.txt  mtrxstdafx.h
Libraries/Matrix-Engine/Include/Matrix/Pch/INTERNAL/: CMakeLists.txt  INTERNAL_mtrxstdafx.h  PCH_stdarg.h  PCH_stdio.h
Libraries/Matrix-Engine/Include/Matrix/Renderer/: CMakeLists.txt  renderer.h  renderer_data.h
Libraries/Matrix-Engine/Include/Matrix/Renderer/INTERNAL/: CMakeLists.txt  INTERNAL_renderer.h  INTERNAL_renderer_data.h  INTERNAL_renderer_errors.h
Libraries/Matrix-Engine/Include/Matrix/Renderer/INTERNAL/Vulkan/: CMakeLists.txt  INTERNAL_vulkan.h  INTERNAL_vulkan_data.h  INTERNAL_vulkan_errors.h  INTERNAL_vulkan_helpers.h
Libraries/Matrix-Engine/Include/Matrix/Statemanager/: CMakeLists.txt  statemanager.h  statemanager_data.h
Libraries/Matrix-Engine/Include/Matrix/Statemanager/INTERNAL/: CMakeLists.txt  INTERNAL_statemanager.h  INTERNAL_statemanager_data.h  INTERNAL_statemanager_errors.h  INTERNAL_statemanager_helpers.h
Libraries/Matrix-Engine/Include/Matrix/Time/: CMakeLists.txt  time.h
Libraries/Matrix-Engine/Include/Matrix/Time/INTERNAL/: CMakeLists.txt  INTERNAL_time.h  INTERNAL_time_data.h
Libraries/Matrix-Engine/Include/Matrix/Vector/: CMakeLists.txt  vector.h
Libraries/Matrix-Engine/Include/Matrix/Vector/INTERNAL/: INTERNAL_vector_data.h
Libraries/Matrix-Engine/Include/Matrix/Window/: CMakeLists.txt  window.h  window_data.h
Libraries/Matrix-Engine/Include/Matrix/Window/INTERNAL/: CMakeLists.txt  INTERNAL_window.h  INTERNAL_window_data.h  INTERNAL_window_errors.h
Libraries/Matrix-Engine/Include/Matrix/Window/INTERNAL/Glfw/: CMakeLists.txt  INTERNAL_glfw.h  INTERNAL_glfw_data.h  INTERNAL_glfw_errors.h
Libraries/Matrix-Engine/Libraries/: CMakeLists.txt
Libraries/Matrix-Engine/Libraries/stb/: CMakeLists.txt
Libraries/Matrix-Engine/Libraries/stb/Include/: CMakeLists.txt
Libraries/Matrix-Engine/Libraries/stb/Include/Stb/: stb_sprintf.h
Libraries/Matrix-Engine/Source/Matrix/: CMakeLists.txt
Libraries/Matrix-Engine/Source/Matrix/Application/: CMakeLists.txt  application.c
Libraries/Matrix-Engine/Source/Matrix/Application/INTERNAL/: CMakeLists.txt  INTERNAL_application.c
Libraries/Matrix-Engine/Source/Matrix/Console/: CMakeLists.txt  console.c
Libraries/Matrix-Engine/Source/Matrix/Core/: CMakeLists.txt  error.c  main.c
Libraries/Matrix-Engine/Source/Matrix/Engine/: CMakeLists.txt  engine.c
Libraries/Matrix-Engine/Source/Matrix/Engine/INTERNAL/: CMakeLists.txt  INTERNAL_engine.c
Libraries/Matrix-Engine/Source/Matrix/Logger/: CMakeLists.txt  logger.c
Libraries/Matrix-Engine/Source/Matrix/Logger/INTERNAL/: CMakeLists.txt  INTERNAL_logger.c
Libraries/Matrix-Engine/Source/Matrix/Memory/: CMakeLists.txt  memory.c
Libraries/Matrix-Engine/Source/Matrix/Memory/INTERNAL/: CMakeLists.txt
Libraries/Matrix-Engine/Source/Matrix/Renderer/: CMakeLists.txt  renderer.c
Libraries/Matrix-Engine/Source/Matrix/Renderer/INTERNAL/: CMakeLists.txt  INTERNAL_renderer.c
Libraries/Matrix-Engine/Source/Matrix/Statemanager/: CMakeLists.txt  statemanager.c
Libraries/Matrix-Engine/Source/Matrix/Statemanager/INTERNAL/: CMakeLists.txt  INTERNAL_statemanager.c  INTERNAL_statemanager_helpers.c
Libraries/Matrix-Engine/Source/Matrix/Time/: CMakeLists.txt  time.c
Libraries/Matrix-Engine/Source/Matrix/Time/INTERNAL/: CMakeLists.txt  INTERNAL_time.c
Libraries/Matrix-Engine/Source/Matrix/Vector/: CMakeLists.txt  vector.c
Libraries/Matrix-Engine/Source/Matrix/Vector/INTERNAL/: CMakeLists.txt  INTERNAL_vector_data.h  INTERNAL_vector_errors.h
Libraries/Matrix-Engine/Source/Matrix/Window/: CMakeLists.txt  window.c
Libraries/Matrix-Engine/Source/Matrix/Window/INTERNAL/: CMakeLists.txt  INTERNAL_window.c
Projects/Twilight-Game/: CMakeLists.txt
Projects/Twilight-Game/Include/: CMakeLists.txt
Projects/Twilight-Game/Include/Twilight/: CMakeLists.txt  twilight.h
Projects/Twilight-Game/Include/Twilight/Game/: CMakeLists.txt  game.h
Projects/Twilight-Game/Resources/: CompileShaders.bat  CompileShaders.sh  frag.spv  simple_shader.frag.glsl  simple_shader.vert.glsl  vert.spv
Projects/Twilight-Game/Source/: CMakeLists.txt
Projects/Twilight-Game/Source/Twilight/: CMakeLists.txt  twilight.c
Projects/Twilight-Game/Source/Twilight/Game/: CMakeLists.txt  game.c
(+6 files in other folders)
